[package]
name = "wfc-generator"
version = "0.1.0"
authors = ["ChrizBonex <chr.e@live.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
regex = "1.5"
hashbrown = "0.11"

[dev-dependencies]
criterion = { version = "0.3" }

[[bench]]
name = "mybench"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true